About to rearrange params

--- a/nf/cfmsflow/nextflow.config
+++ b/nf/cfmsflow/nextflow.config
@@ -1,6 +1,12 @@
 
 params {
 
+
+    entrypoint='calc_features'
+
+
+
+
     help=false
     version=false
     input_dir='/project/cmcwhite/pipelines/cfmsinfer/elutions/processed_elutions'
