Add entry points

--- a/nf/cfmsflow/nextflow.config
+++ b/nf/cfmsflow/nextflow.config
@@ -1,7 +1,7 @@
 
 params {
 
-    entrypoint='calc_features'
+    entrypoint=1
     exitpoint='cluster'
 
     help=false
@@ -12,6 +12,8 @@ params {
 
     existing_feature_matrix='/project/cmcwhite/pipelines/cfmsinfer/feature_matrix/testrun.featmat'
     goldstandard_complexes='/project/cmcwhite/pipelines/cfmsinfer/accessory_files/allComplexesCore_photo_euktovirNOG_expansion.txt'
+
+    generate_labels = true
 
     merge_threshold=0.6
     complex_size_threshold=30
