Add output directory and params

--- a/nf/cfmsflow/nextflow.config
+++ b/nf/cfmsflow/nextflow.config
@@ -2,15 +2,17 @@
 params {
 
     entrypoint=1
-    exitpoint='cluster'
+    exitpoint=7
 
     help=false
     version=false
     input_dir='/project/cmcwhite/pipelines/cfmsinfer/elutions/processed_elutions'
     elution_pattern='*.wide'
+    features_entrypoint2='*ordered'
+    feature_matrix_entrypoint3='/project/cmcwhite/pipelines/cfmsinfer/feature_matrix/testrun.featmat'
+    feature_matrix_labeled_entrypoint4='/project/cmcwhite/pipelines/cfmsinfer/feature_matrix/testrun.featmat.labeled'
+    scored_interactions_entrypoint5='/project/cmcwhite/pipelines/cfmsinfer/training/tpot_testrun_scored.txt'  
 
-
-    existing_feature_matrix='/project/cmcwhite/pipelines/cfmsinfer/feature_matrix/testrun.featmat'
     goldstandard_complexes='/project/cmcwhite/pipelines/cfmsinfer/accessory_files/allComplexesCore_photo_euktovirNOG_expansion.txt'
 
     generate_labels = true
