Got help message displaying from json

--- a/nf/cfmsflow/nextflow.config
+++ b/nf/cfmsflow/nextflow.config
@@ -1,5 +1,13 @@
 
+// Specify params.settings.json settings
+//params_description {
+//    path = "$baseDir/parameters.settings.json"
+//}
+
+
 params {
+
+    params_description =  "$baseDir/parameters.settings.json"
 
     entrypoint=1
     exitpoint=7
