Work on path input handling

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,7 +1,7 @@
 
 process {
-  cpus = 1
-  memory = '1G'
+  cpus = 16
+  memory = '4G'
   errorStrategy = { task.attempt <= 2 ? "retry" : "finish" }
   maxRetries = 1
 }
@@ -18,15 +18,13 @@ params {
 
     help=false
     version=false
-    input_dir='/project/cmcwhite/pipelines/cfmsinfer/elutions/processed_elutions'
-    elution_pattern='*.wide'
-    features_entrypoint2='*ordered'
-    feature_matrix_entrypoint3='/project/cmcwhite/pipelines/cfmsinfer/feature_matrix/testrun.featmat'
-    feature_matrix_labeled_entrypoint4='/project/cmcwhite/pipelines/cfmsinfer/feature_matrix/testrun.featmat.labeled'
-    scored_interactions_entrypoint5='/project/cmcwhite/pipelines/cfmsinfer/training/tpot_testrun_scored.txt'  
-
-    goldstandard_complexes='/project/cmcwhite/pipelines/cfmsinfer/accessory_files/allComplexesCore_photo_euktovirNOG_expansion.txt'
-
+    input_dir=
+    elution_pattern=
+    features_entrypoint2=
+    feature_matrix_entrypoint3=
+    feature_matrix_labeled_entrypoint4=
+    scored_interactions_entrypoint5=
+    goldstandard_complexes=
     generate_labels = true
 
     merge_threshold=0.6
@@ -34,18 +32,17 @@ params {
     negatives_from_observed=true
     negative_limit=20000
 
-    postrain='/project/cmcwhite/pipelines/cfmsinfer/gold_standards/pos_train.txt'
-    negtrain= '/project/cmcwhite/pipelines/cfmsinfer/gold_standards/neg_train.txt'
-    postest='/project/cmcwhite/pipelines/cfmsinfer/gold_standards/pos_test.txt'
-    negtest= '/project/cmcwhite/pipelines/cfmsinfer/gold_standards/neg_test.txt'
-   
-    classifiers_to_scan='/project/cmcwhite/pipelines/cfmsinfer/accessory_files/classifier_subset.txt'
+    postrain=
+    negtrain=''
+    postest=''
+    negtest=''    
+    classifiers_to_scan=''
     generations=10
     population=20
     n_jobs=20
 
     walktrap_steps=3
-    annotation_file='/project/cmcwhite/pipelines/cfmsinfer/accessory_files/virNOG_collapse_annotations.txt'
+    annotation_file=''
     elution_file=''
 
     plot_pr='False'
@@ -53,6 +50,7 @@ params {
     output_dir='output_dir'
 }
 
+// Copied from MLST
 params.output_dir = ".default_hidden"
 params.pipeline_info = "${params.output_dir}/pipeline_info"
 timeline {
@@ -65,22 +63,6 @@ report {
 }
 dag {
   enabled = true
-  file = "${params.pipeline_info}/pipeline_dag.png"
+  file = "${params.pipeline_info}/pipeline_dag.pdf"
 }
-
-params.output_dir = ".default_hidden"
-params.pipeline_info = "${params.output_dir}/pipeline_info"
-timeline {
-  enabled = true
-  file = "${params.pipeline_info}/execution_timeline.html"
-}
-report {
-  enabled = true
-  file = "${params.pipeline_info}/execution_report.html"
-}
-dag {
-  enabled = true
-  file = "${params.pipeline_info}/pipeline_dag.png"
-}
-
 
