Fix clustering to add elution and annotation

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,20 +11,20 @@ params {
 
     /// Default parameter values
 
-    params_description =  "$baseDir/lib/params/parameters.settings.json"
+    params_description =  "lib/params/parameters.settings.json"
 
     entrypoint=1
     exitpoint=7
 
     help=false
     version=false
-    input_dir=
-    elution_pattern=
-    features_entrypoint2=
-    feature_matrix_entrypoint3=
-    feature_matrix_labeled_entrypoint4=
-    scored_interactions_entrypoint5=
-    goldstandard_complexes=
+    input_dir=""
+    elution_pattern=""
+    features_entrypoint2=""
+    feature_matrix_entrypoint3=""
+    feature_matrix_labeled_entrypoint4=""
+    scored_interactions_entrypoint5=""
+    goldstandard_complexes=""
     generate_labels = true
 
     merge_threshold=0.6
@@ -32,7 +32,7 @@ params {
     negatives_from_observed=true
     negative_limit=20000
 
-    postrain=
+    postrain=''
     negtrain=''
     postest=''
     negtest=''    
