Drop defaults from config

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,7 +1,7 @@
 
 process {
   cpus = 16
-  memory = '4G'
+  memory = "4G"
   errorStrategy = { task.attempt <= 2 ? "retry" : "finish" }
   maxRetries = 1
 }
@@ -13,41 +13,40 @@ params {
 
     params_description =  "lib/params/parameters.settings.json"
 
-    entrypoint=1
-    exitpoint=7
+    //entrypoint=1
+    //exitpoint=5
 
-    help=false
-    version=false
-    input_dir=""
-    elution_pattern=""
-    features_entrypoint2=""
-    feature_matrix_entrypoint3=""
-    feature_matrix_labeled_entrypoint4=""
-    scored_interactions_entrypoint5=""
-    goldstandard_complexes=""
-    generate_labels = true
-
-    merge_threshold=0.6
-    complex_size_threshold=30
-    negatives_from_observed=true
-    negative_limit=20000
-
-    postrain=''
-    negtrain=''
-    postest=''
-    negtest=''    
-    classifiers_to_scan=''
-    generations=10
-    population=20
-    n_jobs=20
-
-    walktrap_steps=3
-    annotation_file=''
-    elution_file=''
-
-    plot_pr='False'
-    fdr_cutoff=0.2
-    output_dir='output_dir'
+//    help=false
+//    version=false
+//    input_dir=""
+//    elution_pattern=""
+//    features_entrypoint2=""
+//    feature_matrix_entrypoint3=""
+//    feature_matrix_labeled_entrypoint4=""
+//    scored_interactions_entrypoint5=""
+//    goldstandard_complexes=""
+//    generate_labels = true
+//    merge_threshold=0.6
+//    complex_size_threshold=30
+//    negatives_from_observed=true
+//    negative_limit=20000
+//
+//    postrain=""
+//    negtrain=""
+//    postest=""
+//    negtest=""    
+//    classifiers_to_scan=""
+//    generations=10
+//    population=20
+//    n_jobs=20
+//
+//    walktrap_steps=3
+//    annotation_file=""
+//    elution_file=""
+//
+//    plot_pr="False"
+//    fdr_cutoff=0.2
+//    output_dir="output_dir"
 }
 
 // Copied from MLST
