--- a/nextflow.config
+++ b/nextflow.config
@@ -16,8 +16,8 @@ params {
     //entrypoint=1
     //exitpoint=5
 
-//    help=false
-//    version=false
+    help=false
+    version=false
 //    input_dir=""
 //    elution_pattern=""
 //    features_entrypoint2=""
