--- a/nextflow.config
+++ b/nextflow.config
@@ -13,17 +13,20 @@ params {
 
     params_description =  "lib/params/parameters.settings.json"
 
-    //entrypoint=1
-    //exitpoint=5
+    entrypoint=1
+    exitpoint=5
 
     help=false
     version=false
-//    input_dir=""
+
+    output_dir="output"
+
 //    elution_pattern=""
-//    features_entrypoint2=""
-//    feature_matrix_entrypoint3=""
-//    feature_matrix_labeled_entrypoint4=""
-//    scored_interactions_entrypoint5=""
+//    features_patttern=""
+//    feature_matrix=""
+//    feature_matrix_labeled=""
+//    scored_interactions=""
+
 //    goldstandard_complexes=""
 //    generate_labels = true
 //    merge_threshold=0.6
@@ -46,7 +49,6 @@ params {
 //
 //    plot_pr="False"
 //    fdr_cutoff=0.2
-//    output_dir="output_dir"
 }
 
 // Copied from MLST
