--- a/nextflow.config
+++ b/nextflow.config
@@ -54,8 +54,8 @@ params {
 }
 
 // Copied from MLST
-params.output_dir = ".default_hidden"
-params.pipeline_info = "${params.output_dir}/pipeline_info"
+params.info_dir = ".default_hidden"
+params.pipeline_info = "${params.info_dir}/pipeline_info"
 timeline {
   enabled = true
   file = "${params.pipeline_info}/execution_timeline.html"
