--- a/nextflow.config
+++ b/nextflow.config
@@ -3,7 +3,9 @@ process {
   cpus = 16
   memory = "4G"
   errorStrategy = { task.attempt <= 2 ? "retry" : "finish" }
-  maxRetries = 1
+  maxRetries = 1 
+  docker.enabled = true
+  container = 'clairemcwhite/cfmsflow'
 }
 
 
