--- a/nextflow.config
+++ b/nextflow.config
@@ -2,10 +2,10 @@
 process {
   cpus = 16
   memory = "4G"
-  errorStrategy = { task.attempt <= 2 ? "retry" : "finish" }
-  maxRetries = 1 
+  //errorStrategy = { task.attempt <= 2 ? "retry" : "finish" }
+  //maxRetries = 1 
   docker.enabled = true
-  container = 'clairemcwhite/cfmsflow'
+  container = 'clairemcwhite/cfmsflow:latest'
 }
 
 
