--- a/nextflow.config
+++ b/nextflow.config
@@ -1,11 +1,18 @@
+process.container =  'clairemcwhite/cfmsflow:latest'
+
+
+docker {
+    enabled = true
+    temp = 'auto'
+    fixOwnership = true
+}
 
 process {
   cpus = 16
   memory = "4G"
   //errorStrategy = { task.attempt <= 2 ? "retry" : "finish" }
   //maxRetries = 1 
-  docker.enabled = true
-  container = 'clairemcwhite/cfmsflow:latest'
+ 
 }
 
 
@@ -17,13 +24,47 @@ params {
 
     entrypoint=1
     exitpoint=5
-
-    generate_labels=true
+    using_existing_goldstandards=false
 
     help=false
     version=false
 
     output_dir="output"
+    output_json=false
+    make_parameter_json = false
+    expose_docker_paths = false    
+
+    postrain = ""
+    postest = ""
+    negtrain = ""
+    negtest = ""
+    traincomplexgroups = ""
+    input_elution_pattern = ""
+    input_elution_file = ""
+    goldstandard_complexes = ""
+    merge_threshold = ""
+    complex_size_threshold = ""
+    negatives_from_observed = ""
+    negative_limit = ""
+    add_poisson_noise = ""
+    poisson_reps = ""
+    classifiers_to_scan = ""
+    generations = ""
+    population = ""
+    n_jobs = ""
+    max_features_to_select = ""
+    annotation_file = ""
+    walktrap_steps = ""
+    plot_pr = ""
+    fdr_cutoff = ""
+
+
+
+
+
+
+
+
 
 //    elution_pattern=""
 //    features_patttern=""
@@ -31,7 +72,7 @@ params {
 //    feature_matrix_labeled=""
 //    scored_interactions=""
 
-//    goldstandard_complexes=""
+      goldstandard_complexes=""
 //    generate_labels = true
 //    merge_threshold=0.6
 //    complex_size_threshold=30
