Set up examples 1 and 2

--- a/nextflow.config
+++ b/nextflow.config
@@ -22,8 +22,8 @@ params {
 
     params_description =  "lib/params/parameters.settings.json"
 
-    entrypoint=1
-    exitpoint=5
+    entrypoint=""
+    exitpoint=""
     using_existing_goldstandards=false
 
     help=false
@@ -41,13 +41,15 @@ params {
     traincomplexgroups = ""
     input_elution_pattern = ""
     input_elution_file = ""
+    input_features_pattern = ""
+    input_features_file = ""
+
     goldstandard_complexes = ""
     merge_threshold = ""
     complex_size_threshold = ""
     negatives_from_observed = ""
     negative_limit = ""
-    add_poisson_noise = ""
-    poisson_reps = ""
+    added_poisson_reps = ""
     classifiers_to_scan = ""
     generations = ""
     population = ""
