Docker fully working, examples checked

--- a/nextflow.config
+++ b/nextflow.config
@@ -43,6 +43,8 @@ params {
     input_elution_file = ""
     input_features_pattern = ""
     input_features_file = ""
+    existing_feature_matrix = ""
+    existing_labeled_feature_matrix= ""
 
     goldstandard_complexes = ""
     merge_threshold = ""
@@ -62,40 +64,6 @@ params {
 
 
 
-
-
-
-
-
-
-//    elution_pattern=""
-//    features_patttern=""
-//    feature_matrix=""
-//    feature_matrix_labeled=""
-//    scored_interactions=""
-
-      goldstandard_complexes=""
-//    generate_labels = true
-//    merge_threshold=0.6
-//    complex_size_threshold=30
-//    negatives_from_observed=true
-//    negative_limit=20000
-//
-//    postrain=""
-//    negtrain=""
-//    postest=""
-//    negtest=""    
-//    classifiers_to_scan=""
-//    generations=10
-//    population=20
-//    n_jobs=20
-//
-//    walktrap_steps=3
-//    annotation_file=""
-//    elution_file=""
-//
-//    plot_pr="False"
-//    fdr_cutoff=0.2
 }
 
 // Copied from MLST
