--- a/nextflow.config
+++ b/nextflow.config
@@ -1,4 +1,4 @@
-process.container =  'clairemcwhite/cfmsflow:latest'
+//process.container =  'clairemcwhite/cfmsflow:latest'
 
 
 docker {
@@ -8,8 +8,9 @@ docker {
 }
 
 process {
+  container = 'clairemcwhite/cfmsflow:latest'
   cpus = 16
-  memory = "4G"
+  memory = "10G"
   //errorStrategy = { task.attempt <= 2 ? "retry" : "finish" }
   //maxRetries = 1 
  
