Reduce chunksize to avoid hitting memory ceiling in add_label

--- a/nextflow.config
+++ b/nextflow.config
@@ -35,6 +35,7 @@ params {
     make_parameter_json = false
     expose_docker_paths = false    
 
+    tpot_template = 'Selector-Classifier'
     postrain = ""
     postest = ""
     negtrain = ""
